# cli

./: .editorconfig  .taplo.toml  Cargo.toml  LICENSE  Makefile  README.md  Taskfile.yml  install.sh  justfile  rust-toolchain.toml  rustfmt.toml
.github/: CODEOWNERS
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  release.yml
src/: app.rs  cli.rs  config.rs  macros.rs  main.rs
src/commands/: clone.rs  complete.rs  mod.rs
src/commands/config/: cli.rs  find.rs  mod.rs  print.rs
src/commands/config/set/: cli.rs  dotfiles.rs  infra.rs  mod.rs
src/commands/dotfiles/: check.rs  cli.rs  diff.rs  find.rs  mod.rs  open.rs  set.rs  sync.rs
src/commands/generate/: cli.rs  mod.rs  templates.rs
src/commands/infra/: cli.rs  diff.rs  find.rs  open.rs
src/commands/open/: cli.rs  mod.rs  node.rs  rust.rs
src/commands/shrink/: cli.rs  mod.rs  patterns.rs
src/commands/template/: cli.rs  init.rs  list.rs  mod.rs  templates.rs
src/internal/: files.rs  git.rs  languages.rs  mod.rs  programs.rs
