[package]
authors    = ["killbasa"]
edition    = "2021"
license    = "MIT"
name       = "kb"
repository = "https://github.com/killbasa/cli"
version    = "0.2.7"

[profile.release]
codegen-units = 1
lto           = true
strip         = "symbols"

[dependencies]
anyhow        = "1.0.88"
byte-unit     = "5.1.4"
clap          = { version = "4.5.17", features = ["derive"] }
clap_complete = "4.5.26"
confy         = "0.6.1"
curl          = "0.4.46"
dunce         = "1.0.5"
git2          = "0.19.0"
glob          = "0.3.1"
once_cell     = "1.20.0"
open          = "5.3.0"
openssl       = "0.10.66"
reqwest       = { version = "0.12.7", features = ["blocking", "json"] }
serde         = { version = "1.0.210", features = ["derive"] }
spinoff       = { version = "0.8.0", features = ["dots"] }
url           = "2.5.2"
