[package]
authors    = ["killbasa"]
edition    = "2021"
license    = "MIT"
name       = "kb"
repository = "https://github.com/killbasa/cli"
version    = "0.2.8"

[profile.release]
codegen-units = 1
lto           = true
strip         = "symbols"

[dependencies]
anyhow        = "1.0.95"
byte-unit     = "5.1.6"
clap          = { version = "4.5.27", features = ["derive"] }
clap_complete = "4.5.42"
confy         = "0.6.1"
curl          = "0.4.47"
dunce         = "1.0.5"
git2          = "0.20.0"
glob          = "0.3.2"
once_cell     = "1.20.2"
open          = "5.3.2"
openssl       = "0.10.68"
reqwest       = { version = "0.12.12", features = ["blocking", "json"] }
serde         = { version = "1.0.217", features = ["derive"] }
spinoff       = { version = "0.8.0", features = ["dots"] }
url           = "2.5.4"
