[package]
authors    = ["killbasa <contact@killbasa.com>"]
edition    = "2024"
license    = "MIT"
name       = "kb"
repository = "https://github.com/killbasa/cli"
version    = "0.3.0"

[profile.release]
codegen-units = 1
debug         = false
lto           = "fat"
opt-level     = 3
strip         = "symbols"

[profile.release-debug]
debug    = true
inherits = "release"

[dependencies]
anyhow        = "1.0.95"
clap          = { version = "4.5.27", features = ["derive"] }
clap_complete = "4.5.42"
confy         = "0.6.1"
dunce         = "1.0.5"
git2          = "0.20.0"
once_cell     = "1.20.2"
open          = "5.3.2"
reqwest       = { version = "0.12.12", features = ["blocking", "json"] }
serde         = { version = "1.0.217", features = ["derive"] }
spinoff       = { version = "0.8.0", features = ["dots"] }
url           = "2.5.4"
